# ferro_ai

./: .gitignore  README.md  pyproject.toml
ecommerce/: settings.py  urls.py
products/: admin.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
products/migrations/: 0001_initial.py
